@@ -1,6 +1,5 @@
 package com.example.hatsalvoids.shade;
 
-
 import com.example.hatsalvoids.building.Building;
 import com.example.hatsalvoids.building.BuildingRepository;
 import com.example.hatsalvoids.building.model.FetchBuildingResponse;
@@ -23,7 +22,7 @@ import org.locationtech.jts.geom.*;
 import org.locationtech.jts.io.WKTWriter;
 import org.locationtech.proj4j.*;
 import org.springframework.stereotype.Service;
-
+import java.util.stream.Collectors;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
@@ -42,78 +41,88 @@ public class ShadeService {
 
     // 그늘 구하기
     public List<FetchShadeResponse> fetchShadesByVWorldApi(String latitude, String longitude, double radius,
-                                                           String time, String zoneId) {
+            String time, String zoneId) {
         return getFetchShadeResponsesByVWorldApi(latitude, longitude, radius, time, zoneId);
     }
 
     public List<FetchShadeBuildingResponse> fetchShadesByDatabase(String latitude, String longitude, double radius,
-                                                                  String time, String zoneId) {
+            String time, String zoneId) {
         return getFetchShadeResponsesByDatabase(latitude, longitude, radius, time, zoneId);
     }
 
-    public List<FetchShadeBuildingResponse> fetchShadesByDatabaseParallel(String latitude, String longitude, double radius,
-                                                                          String time, String zoneId) {
+    public List<FetchShadeBuildingResponse> fetchShadesByDatabaseParallel(String latitude, String longitude,
+            double radius,
+            String time, String zoneId) {
         return getFetchShadeResponsesByDatabaseParallel(latitude, longitude, radius, time, zoneId);
     }
 
-    private List<FetchShadeBuildingResponse> getFetchShadeResponsesByDatabaseParallel(String latitude, String longitude, double radius, String time, String zoneId) {
+    private List<FetchShadeBuildingResponse> getFetchShadeResponsesByDatabaseParallel(String latitude, String longitude,
+            double radius, String time, String zoneId) {
         ZonedDateTime when = GlobalUtils.getZonedDateTime(time, zoneId);
-        List<Building> buildings = buildingRepository.findByAround(Double.parseDouble(latitude), Double.parseDouble(longitude), radius);
+        List<Building> buildings = buildingRepository.findByAround(Double.parseDouble(latitude),
+                Double.parseDouble(longitude), radius);
 
         try {
             return pool.submit(() -> buildings.stream().parallel().map(
                     building -> {
-                        List<List<double[]>> rings =
-                                GeometryUtils.convertCoordinates2LinearRings(building.getBuildingPolygon().getCoordinates());
+                        GlobalLogger.info("thread:", Thread.currentThread().getName());
+                        List<List<double[]>> rings = GeometryUtils
+                                .convertCoordinates2LinearRings(building.getBuildingPolygon().getCoordinates());
 
-                        ShadeGeometryResult shadeGeometryResult =
-                                computeShadeGeometryEpsg5186(rings, building.getHeight(), when, zoneId);
+                        ShadeGeometryResult shadeGeometryResult = computeShadeGeometryEpsg5186(rings,
+                                building.getHeight(), when, zoneId);
 
                         return FetchShadeBuildingResponse.of(FetchBuildingResponse.from(building), shadeGeometryResult);
-                    }
-            ).toList()).get();
+                    }).collect(Collectors.toList())).get();
         } catch (InterruptedException | ExecutionException e) {
             throw new RuntimeException(e);
         }
     }
 
-    private List<FetchShadeBuildingResponse> getFetchShadeResponsesByDatabase(String latitude, String longitude, double radius, String time, String zoneId) {
+    private List<FetchShadeBuildingResponse> getFetchShadeResponsesByDatabase(String latitude, String longitude,
+            double radius, String time, String zoneId) {
         ZonedDateTime when = GlobalUtils.getZonedDateTime(time, zoneId);
-        List<Building> buildings = buildingRepository.findByAround(Double.parseDouble(latitude), Double.parseDouble(longitude), radius);
+        List<Building> buildings = buildingRepository.findByAround(Double.parseDouble(latitude),
+                Double.parseDouble(longitude), radius);
 
         return buildings.stream().map(
                 building -> {
-                    List<List<double[]>> rings =
-                            GeometryUtils.convertCoordinates2LinearRings(building.getBuildingPolygon().getCoordinates());
+                    GlobalLogger.info("thread:", Thread.currentThread().getName());
+                    List<List<double[]>> rings = GeometryUtils
+                            .convertCoordinates2LinearRings(building.getBuildingPolygon().getCoordinates());
 
-                    ShadeGeometryResult shadeGeometryResult = computeShadeGeometryEpsg5186(rings, building.getHeight(), when, zoneId);
+                    ShadeGeometryResult shadeGeometryResult = computeShadeGeometryEpsg5186(rings, building.getHeight(),
+                            when, zoneId);
                     return FetchShadeBuildingResponse.of(FetchBuildingResponse.from(building), shadeGeometryResult);
-                }
-        ).toList();
+                }).toList();
     }
 
-    private List<FetchShadeResponse> getFetchShadeResponsesByVWorldApi(String latitude, String longitude, double radius, String time, String zoneId) {
+    private List<FetchShadeResponse> getFetchShadeResponsesByVWorldApi(String latitude, String longitude, double radius,
+            String time, String zoneId) {
         ZonedDateTime when = GlobalUtils.getZonedDateTime(time, zoneId);
         List<FetchShadeResponse> results = new ArrayList<>();
 
         // 현재 위치에서 주변 반경 내 건물 리스트를 "도로명주소건물 API" 호출하여 가져오기
-        List<RoadAddressBuildingApiResponse> roadAddressBuildingApiResponses = getRoadAddressBuildingApiResponses(latitude, longitude, radius);
+        List<RoadAddressBuildingApiResponse> roadAddressBuildingApiResponses = getRoadAddressBuildingApiResponses(
+                latitude, longitude, radius);
+
+        int outerCount = 0;
 
         for (RoadAddressBuildingApiResponse roadAddressBuildingApiResponse : roadAddressBuildingApiResponses) {
             List<RoadAddressBuildingApiResponse.FeatureDto> features = roadAddressBuildingApiResponse.getFeatures();
-            int outCount = 0;
             int count = 0;
-            outCount++;
+            outerCount++;
             for (RoadAddressBuildingApiResponse.FeatureDto feature : features) {
-                GlobalLogger.info("처리 중인 건물 ID: ",count++,"/" ,features.size(),"총 응답 수: ", outCount, "/", roadAddressBuildingApiResponses.size());
-                if(buildingRepository.existsByvWorldBuildingId(feature.getId())){
+                GlobalLogger.info("처리 중인 건물 ID: ", count++, "/", features.size(), "총 응답 수: ", outerCount, "/",
+                        roadAddressBuildingApiResponses.size());
+                if (buildingRepository.existsByvWorldBuildingId(feature.getId())) {
                     continue; // 이미 데이터베이스에 존재하는 건물은 건너뜀
                 }
 
                 // nestedGeometry 추출
                 List<List<List<List<Double>>>> nestedGeometry = feature.getCoordinates();
 
-                //  API 호출 결과의 건축관리대장번호 앞자리 19자를 추출하여 pnu 추출
+                // API 호출 결과의 건축관리대장번호 앞자리 19자를 추출하여 pnu 추출
                 String pnu = feature.getPnu();
 
                 // pnu로 "GIS건물통합WFS조회 API" 호출해서 건축물 높이 가져오기
@@ -129,7 +138,6 @@ public class ShadeService {
                 List<List<double[]>> rings = extractLinearRings(nestedGeometry);
                 ShadeGeometryResult result = computeShadeGeometryEpsg5186(rings, buildingHeightM, when, zoneId);
 
-
                 // 빌딩이 없다면 데이터베이스에 생성하기
                 createIfBuildingNotExists(feature, pnu, buildingHeightM, rings);
 
@@ -140,7 +148,8 @@ public class ShadeService {
         return results;
     }
 
-    private void createIfBuildingNotExists(RoadAddressBuildingApiResponse.FeatureDto feature, String pnu, Double buildingHeightM, List<List<double[]>> rings) {
+    private void createIfBuildingNotExists(RoadAddressBuildingApiResponse.FeatureDto feature, String pnu,
+            Double buildingHeightM, List<List<double[]>> rings) {
         if (!buildingRepository.existsByvWorldBuildingId(feature.getId())) {
             buildingRepository.save(Building.builder()
                     .pnu(pnu)
@@ -150,12 +159,12 @@ public class ShadeService {
                     .buildingPolygon(GeometryUtils.createPolygonFromRings(rings))
                     .vWorldBuildingId(feature.getId())
                     .bdMgtSn(feature.getProperties().getBd_mgt_sn())
-                    .build()
-            );
+                    .build());
         }
     }
 
-    private List<RoadAddressBuildingApiResponse> getRoadAddressBuildingApiResponses(String latitude, String longitude, double radius) {
+    private List<RoadAddressBuildingApiResponse> getRoadAddressBuildingApiResponses(String latitude, String longitude,
+            double radius) {
         Geometry bufferPolygon = getBufferPolygon(Double.parseDouble(latitude),
                 Double.parseDouble(longitude), radius);
 
@@ -211,7 +220,7 @@ public class ShadeService {
                     List<?> pt = (List<?>) p;
                     double x = toDouble(pt.get(0));
                     double y = toDouble(pt.get(1));
-                    ring.add(new double[]{x, y});
+                    ring.add(new double[] { x, y });
                 }
                 rings.add(ring);
                 return;
@@ -223,7 +232,8 @@ public class ShadeService {
     }
 
     private boolean isRing(List<?> candidate) {
-        if (candidate.isEmpty()) return false;
+        if (candidate.isEmpty())
+            return false;
         for (Object p : candidate) {
             if (!(p instanceof List<?> pt && pt.size() == 2 &&
                     pt.get(0) instanceof Number && pt.get(1) instanceof Number)) {
@@ -246,7 +256,7 @@ public class ShadeService {
             sx += p[0];
             sy += p[1];
         }
-        return new double[]{sx / n, sy / n};
+        return new double[] { sx / n, sy / n };
     }
 
     // EPSG:5186 -> EPSG:4326 좌표 변환 후 태양 고도/방위 계산 (SPA)
@@ -272,15 +282,15 @@ public class ShadeService {
                 0.0,
                 deltaT,
                 1010.0,
-                11.0
-        );
+                11.0);
         double azimuthDeg = position.getAzimuth();
         double altitudeDeg = 90.0 - position.getZenithAngle();
-        return new double[]{altitudeDeg, azimuthDeg};
+        return new double[] { altitudeDeg, azimuthDeg };
     }
 
     // 그림자 벡터 계산 (degree 입력)
-    private double[] computeShadeOffset(double heightM, double altitudeDeg, double azimuthDeg, double minAltitudeDeg, double maxLengthM) {
+    private double[] computeShadeOffset(double heightM, double altitudeDeg, double azimuthDeg, double minAltitudeDeg,
+            double maxLengthM) {
         double useAlt = Math.max(altitudeDeg, minAltitudeDeg);
         double length = useAlt > 0.0 ? heightM / Math.tan(Math.toRadians(useAlt)) : maxLengthM;
         length = Math.min(length, maxLengthM);
@@ -288,18 +298,19 @@ public class ShadeService {
         double rad = Math.toRadians(shadeAz);
         double dx = length * Math.sin(rad);
         double dy = length * Math.cos(rad);
-        return new double[]{dx, dy};
+        return new double[] { dx, dy };
     }
 
     private List<double[]> shiftRingXY(List<double[]> ring, double dx, double dy) {
         List<double[]> shifted = new ArrayList<>(ring.size());
         for (double[] p : ring) {
-            shifted.add(new double[]{p[0] + dx, p[1] + dy});
+            shifted.add(new double[] { p[0] + dx, p[1] + dy });
         }
         return shifted;
     }
 
-    private ShadeGeometryResult computeShadeGeometryEpsg5186(List<List<double[]>> rings, double heightM, ZonedDateTime when, String zoneId) {
+    private ShadeGeometryResult computeShadeGeometryEpsg5186(List<List<double[]>> rings, double heightM,
+            ZonedDateTime when, String zoneId) {
         if (rings.isEmpty()) {
             throw new ShadeException(ShadeErrorCode.POINT_NOT_FOUND);
         }
